css: Make sure that the navbar is always visible

--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,7 @@ nav ul {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 2;
 }
 
 nav li {
